--- a/app/views/v14/provider/view/6a-share-applications.html
+++ b/app/views/v14/provider/view/6a-share-applications.html
@@ -20,14 +20,9 @@ Manage vacancy
     
         
         <p class="govuk-body" >
-          Select the applications you want to share with <b>Gloucestershire Health and Care NHS Foundation Trust</b>. 
+          Select the applications you want to share. 
         </p>
 
-        <div class="govuk-inset-text">
-          The employer will be shown an anonymised version of each application with the applicant's name removed.
-        </div>
-
-        <br>
   
 <!-- search box START -->
     <fieldset class="govuk-fieldset">
